--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
                     class="text-black">FREE</span><span class="text-red">CELL</span></h3>
             <span class="text-white font-weight-bold font-italic h3 mr-auto" id="timer" style="margin-left: 150px;">00:00</span>
             <div class="d-inline-block mr-5">
-                <span class="text-white h5 mr-3 pointer black-hover" id="back"><img src="icons/ic_undo_24px.svg"
+                <span class="text-white h5 mr-3 pointer black-hover" id="back"><img src="icon/ic_undo_24px.svg"
                         class="mr-1"><span>UNDO</span></span>
-                <span class="text-white h5 mr-3 pointer red-hover" id="gamePause"><img src="icons/ic_pause_24px.svg"
+                <span class="text-white h5 mr-3 pointer red-hover" id="gamePause"><img src="icon/ic_pause_24px.svg"
                         class="mr-1"><span>PAUSE</span></span>
-                <span class="text-white h5 mr-3 pointer black-hover js-restart"><img src="icons/ic_loop_24px.svg"
+                <span class="text-white h5 mr-3 pointer black-hover js-restart"><img src="icon/ic_loop_24px.svg"
                         class="mr-1"><span>RESTART</span></span>
             </div>
         </nav>
